# ntu-sctp-dsai1f-project-team6

./: .gitignore  README.md  copy_env_to_projects.py  env.txt  environment.yml  load_env.py  studious-plate-461104-e0-ae70cf69c4ca.json
Analysis/: EDA_failurerate_notebook.ipynb  README.md  citibike_eda_usage_trends_revenue.ipynb
Citibike_Analysis/: .gitignore  Citibikes_EDA_Failurerates.ipynb  citibike_eda_usage_trends_revenue.ipynb
archive/world_athletics_pipeline/dagster_world_athletics/: README.md  pyproject.toml  setup.cfg  setup.py
archive/world_athletics_pipeline/dagster_world_athletics/dagster_world_athletics/: assets.py  definitions.py  jobs.py  resources.py
assets/: README.md  Star_schema_edited_design.md  schema_design.sql
citibike-ingestion/: README.md  meltano.yml
citibike_dbt/: .user.yml  README.md  actual-env.yml  dbt_project.yml  packages.yml  profiles.yml
citibike_orchestration/: README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml  workspace.yml
dagster_citibike/: README.md  pyproject.toml  setup.cfg  setup.py
data/: JC-202505-citibike-tripdata-testdata.csv  README.md
db/: create_db.ipynb
dbt_citibike_trip/: .user.yml  dbt_project.yml
dbt_world_athletics/: .user.yml  README.md  dbt_project.yml
documents/: DSAI_1F_Project-v1_0_0.pptx  README.md  data_architecture.md  schema_design.md
duckdb/: create_duckdb.py  load_csv_to_duckdb.py  raw_citibike_trip.duckdb
meltano-citibike/: .gitignore  meltano.yml
meltano-citybike/: meltano.yml
meltano_citibike_ingest/: meltano.yml
meltano_citibike_trip/: meltano.yml
(+116 files in other folders)
