[project]
name = "dagster_world_athletics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_world_athletics.definitions"
code_location_name = "dagster_world_athletics"

[tool.setuptools.packages.find]
exclude=["dagster_world_athletics_tests"]
